--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=postgres
+DB_USERNAME=postgres
 DB_PASSWORD=secret
 DB_NAME=supplyin_db
+FRONTEND_URL=http://localhost:3001
+
