--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DB_HOST=localhost
+DB_HOST=dpg-ctc1f68gph6c73a9t3eg-a.frankfurt-postgres.render.com
 DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=secret
-DB_NAME=supplyin_db
+DB_USERNAME=supplyin_user
+DB_PASSWORD=iUP8pz3Fw5zMdCe6JxG5HpceSlBCKdG5
+DB_NAME=supplyin
 JWT_SECRET=secret
 FRONTEND_URL=http://localhost:3000
-
+DB_SSL=true
