--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.1.1",
+    "debug": "^4.4.0",
     "dotenv": "^16.4.7",
     "lru-cache": "^11.0.2",
     "passport": "^0.7.0",
