--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ DB_USERNAME=supplyin_user
 DB_PASSWORD=iUP8pz3Fw5zMdCe6JxG5HpceSlBCKdG5
 DB_NAME=supplyin
 JWT_SECRET=secret
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://supplyin-frontend.onrender.com
 DB_SSL=true
