--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "homepage": ".",
   "scripts": {
     "typeorm": "typeorm",
     "typeorm:generate": "typeorm migration:generate",
