--- a/package.json
+++ b/package.json
@@ -5,18 +5,17 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
-  "homepage": ".",
   "scripts": {
     "typeorm": "typeorm",
     "typeorm:generate": "typeorm migration:generate",
     "typeorm:run": "typeorm migration:run",
     "typeorm:revert": "typeorm migration:revert",
-    "build": "nest src/build",
+    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node build/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
