add purchase filter to dashboard

--- a/.env
+++ b/.env
@@ -1,9 +1,7 @@
 DB_PORT=5432
 DB_HOST=localhost
-DB_USERNAME=admin
+DB_USERNAME=postgres
 DB_PASSWORD=secret
 DB_NAME=supplyin_db
 JWT_SECRET=secret
 FRONTEND_URL=http://localhost:3000
-
-
